--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -29,8 +29,7 @@
       / = submit_tag "Search", :name => nil
 
     #posts
-      =render 'posts'
+      / =render 'posts'
 
 #mappanel_user.mappanel
   #user
-    hello
