--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,16 +13,21 @@
             %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
               N
               %span.caret
-            %ul.dropdown-menu(style="height:300px;width:300px;overflow:auto;")
-
-              / Build message list for notifcations icon
-              - if @messages.count > 0
-                - @messages.each do |message|
-                  %li
-                    = link_to message.user.name, message.user
-                    = message.content
-              - else
-                %p No messages      
+            %ul.dropdown-menu
+              %li
+                / Build message list for notifcations icon
+                - if @messages_nav.count > 0
+                  - @messages_nav.each do |message_nav|
+                    %li
+                      %a{:href => message_nav.user,
+                         :style => "width:300px;word-wrap: break-word;"}
+                        = message_nav.user.name
+                        %br
+                        = message_nav.content
+                      / = link_to message.user.name + message.content, 
+                       
+                - else
+                  %p No messages      
               %li.divider
               %li
                 = link_to "See all", '/messages'
