--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,9 +8,10 @@
     = render 'layouts/shim'
   %body
     = render 'layouts/header'
-    .container
+    #flash_application
       - flash.each do |key, value|
         = content_tag(:div, value, class: "alert alert-#{key}")
+    .container
       = yield
       / = render 'layouts/footer'
       / <haml:loud> debug(params) if Rails.env.development? </haml:loud>
