--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -9,7 +9,7 @@
 
 #mappanel_posts.mappanel
   #post_form
-    = render 'post_form'
+    = render 'posts/post_form'
 
   = form_tag posts_path, :method => 'get', :id => "posts_search" do
 
