fix up for alastair

--- a/app/views/posts/_posts.html.haml
+++ b/app/views/posts/_posts.html.haml
@@ -1,14 +1,17 @@
 = hidden_field_tag :direction, params[:direction]
 = hidden_field_tag :sort, params[:sort]
+
 %table.posts
   %tr
-    %th= sortable "created_at"
-    %th= sortable "user_id"
-    %th= sortable "content"
+    %th(style="width:60px;")
+      / = sortable "Sort by Date"
+    %th
   - for post in @posts
     %tr{onclick: "google.maps.event.trigger(markerArray[" + post.user_id.to_s + "],'click');"}
-      %td= post.created_at.strftime("%Y-%m-%d %H:%M")
-      %td= post.user_id
-      %td= post.content
+      %td= post.created_at.strftime("%m/%d/%Y")
+      %td
+        = post.user.name
+        .post_content
+          = post.content
 
 = will_paginate @posts
