--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -266,15 +266,19 @@ input, textarea, select, .uneditable-input {
 }
 table.posts {
   border-collapse: collapse;
+  width:100%;
 }
 
 .posts td, .posts th {
-  padding: 4px 10px;
-  border: solid 1px #AAA;
+  padding: 3px 4px;
+  border-bottom: solid 1px #AAA;
+}
+
+.post_content {
+  color: grayLight;
 }
 
 .posts th .current {
-  padding-right: 12px;
   background-repeat: no-repeat;
   background-position: right center;
 }
