--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -43,7 +43,7 @@
     %span.caret
 %section
   #notify_form(style="display:none;margin-top:30px;")
-    = render 'notify_form'
+    = render 'messages/notify_form'
 
 :javascript
   $('#notify_show').click(function() {
