--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,7 +19,7 @@
                 - if @messages_nav.count > 0
                   - @messages_nav.each do |message_nav|
                     %a{:href => message_nav.user,
-                       :style => "width:300px;word-wrap: break-word;"}
+                       :style => ""}
                       = message_nav.user.name
                       %br
                       = message_nav.content
@@ -43,5 +43,5 @@
       -else
         %ul.nav.pull-right
           %li= link_to "Home", root_path
-          %li= link_to "Help", help_path          
+          %li= link_to "Help", help_path
           %li= link_to "Sign in", signin_path
