--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,20 @@
     = render 'layouts/header'
     #flash_application
       - flash.each do |key, value|
-        = content_tag(:div, value, class: "alert alert-#{key}")
+        / fade in function doesn't seem to work yet
+        %div{:class => "alert alert-#{key} fade in"}
+          / inserts close button
+          %a.close{"data-dismiss" => "alert", :href => "#"} ×
+          = value
+
+          ////// some nice buttons for flashes - to be implemented later
+          / %p
+          /   %a.btn.btn-danger{:href => "#"} Take this action
+          /   %a.btn{:href => "#"} Or do this
+          
     .container
       = yield
       / = render 'layouts/footer'
       / <haml:loud> debug(params) if Rails.env.development? </haml:loud>
+
+
