--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,14 +1,14 @@
 - provide(:title, 'Your notifications')
 .row
   .span12
-    %ol.messages
+    %ul.messages
       - if @messages.count > 0
         - @messages.each do |message|
           %li
             %span.user
-              = link_to message.user.id, "#"
+              = User.find_by_id(message.sender_id).name
             %span.content
-              = message.content
+              = link_to message.content, "/messages/" + message.id.to_s
             %span.timestamp
               #{time_ago_in_words(message.created_at)} ago.
       - else
