--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,3 +1,5 @@
 - provide(:title, 'About Us')
-%h1 About Us
-%p this is the about page!
+
+= content_for :content do
+  %h1 About Us
+  %p this is the about page!
