--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,95 +1,97 @@
 - provide(:title, 'Sign up')
 
-%body(onload="load_geocode();")
+= content_for :content do
 
-%h1 Sign up
-.row
-  .span5
-    = form_for(@user) do |f|
-      = render 'shared/error_messages', object: @user
-      = f.label :name
-      = f.text_field :name
-      = f.label :email
-      = f.text_field :email
-      = f.label :password
-      = f.password_field :password
-      = f.label :password_confirmation, "Confirm Password"
-      = f.password_field :password_confirmation
+  %body(onload="load_geocode();")
 
-      = f.label :lat, "Latitude"
-      = f.text_field :lat, id: "lat"
-      = f.label :lng, "Longitude"
-      = f.text_field :lng, id: "lng"
-      = f.label :country, "Country"
-      = f.text_field :country
-      = f.label :city, "City"
-      = f.text_field :city
+  %h1 Sign up
+  .row
+    .span5
+      = form_for(@user) do |f|
+        = render 'shared/error_messages', object: @user
+        = f.label :name
+        = f.text_field :name
+        = f.label :email
+        = f.text_field :email
+        = f.label :password
+        = f.password_field :password
+        = f.label :password_confirmation, "Confirm Password"
+        = f.password_field :password_confirmation
 
-      = f.label :email_admin, "Receive case interview advice email letter"
-      = f.check_box :email_admin
+        = f.label :lat, "Latitude"
+        = f.text_field :lat, id: "lat"
+        = f.label :lng, "Longitude"
+        = f.text_field :lng, id: "lng"
+        = f.label :country, "Country"
+        = f.text_field :country
+        = f.label :city, "City"
+        = f.text_field :city
 
-      = f.label :email_users, "Send notifications from users to your email"
-      = f.check_box :email_users
-      %br
-      = f.submit "Create my account", class: "btn btn-large btn-primary"
-  .span7
-    #map_new.map{:style => "height:450px; width:100%"}
+        = f.label :email_admin, "Receive case interview advice email letter"
+        = f.check_box :email_admin
 
-
-%script{:src => "//maps.googleapis.com/maps/api/js?sensor=false", :type => "text/javascript"}
-
+        = f.label :email_users, "Send notifications from users to your email"
+        = f.check_box :email_users
+        %br
+        = f.submit "Create my account", class: "btn btn-large btn-primary"
+    .span7
+      #map_new.map{:style => "height:450px; width:100%"}
 
 
-:javascript
-  var geocoder = new google.maps.Geocoder();
-  
-  function geocodePosition(pos) {
-    geocoder.geocode({
-      latLng: pos
-    }, function(responses) {
-      if (responses && responses.length > 0) {
-        updateMarkerAddress(responses[0].formatted_address);
-      } else {
-        updateMarkerAddress('Cannot determine address at this location.');
-      }
-    });
-  }
+  %script{:src => "//maps.googleapis.com/maps/api/js?sensor=false", :type => "text/javascript"}
+
+
+
+  :javascript
+    var geocoder = new google.maps.Geocoder();
     
-  function load_geocode() {
-  
-    var latLng = new google.maps.LatLng(51,0);
-    var map = new google.maps.Map(document.getElementById('map_new'), {
-      zoom: 12,
-      center: latLng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP,
-      streetViewControl: false,
-      mapTypeControl: false
-    });
-    var marker = new google.maps.Marker({
-      position: latLng,
-      title: 'Point A',
-      map: map,
-      draggable: true
-    });
-  
-    // Update current position info.
-  
-    google.maps.event.addListener(marker, 'drag', function() {
-      updateMarkerPosition(marker.getPosition());
-    });
+    function geocodePosition(pos) {
+      geocoder.geocode({
+        latLng: pos
+      }, function(responses) {
+        if (responses && responses.length > 0) {
+          updateMarkerAddress(responses[0].formatted_address);
+        } else {
+          updateMarkerAddress('Cannot determine address at this location.');
+        }
+      });
+    }
+      
+    function load_geocode() {
     
-    google.maps.event.addListener(marker, 'dragend', function() {
-      geocodePosition(marker.getPosition());
-    }); 
-  }
+      var latLng = new google.maps.LatLng(51,0);
+      var map = new google.maps.Map(document.getElementById('map_new'), {
+        zoom: 12,
+        center: latLng,
+        mapTypeId: google.maps.MapTypeId.ROADMAP,
+        streetViewControl: false,
+        mapTypeControl: false
+      });
+      var marker = new google.maps.Marker({
+        position: latLng,
+        title: 'Point A',
+        map: map,
+        draggable: true
+      });
+    
+      // Update current position info.
+    
+      google.maps.event.addListener(marker, 'drag', function() {
+        updateMarkerPosition(marker.getPosition());
+      });
+      
+      google.maps.event.addListener(marker, 'dragend', function() {
+        geocodePosition(marker.getPosition());
+      }); 
+    }
 
-  function updateMarkerPosition(latLng) {
-  
-  document.getElementById('lat').value = latLng.lat(); 
-  document.getElementById('lng').value = latLng.lng();
-  
-  }
-  
-  function updateMarkerAddress(str) {
-    document.getElementById('loc').value = str;
-  }
+    function updateMarkerPosition(latLng) {
+    
+    document.getElementById('lat').value = latLng.lat(); 
+    document.getElementById('lng').value = latLng.lng();
+    
+    }
+    
+    function updateMarkerAddress(str) {
+      document.getElementById('loc').value = str;
+    }
