--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     = stylesheet_link_tag    "application", media: "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    / IE shim
     = render 'layouts/shim'
   %body
     = render 'layouts/header'
@@ -22,8 +23,12 @@
           /   %a.btn{:href => "#"} Or do this
           
     .container
-      = yield
+      ////// footer commented out for now
       / = render 'layouts/footer'
+
+      ////// to see request text
       / <haml:loud> debug(params) if Rails.env.development? </haml:loud>
 
-
+      ///// :content now specified in all view - anoying, but enables nested views for 
+      ///// e.g. messages, feedback controllers
+      = yield :content
