--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,10 +1,12 @@
-.row
-  .span7
-    .center.hero-unit
-      %h1 Welcome to casenexus.com
 
-  .span5
-    .center
-      %p
-        This site does things
-      = link_to "Sign up now!", signup_path, class: "btn btn-large btn btn-primary"
+= content_for :content do
+  .row
+    .span7
+      .center.hero-unit
+        %h1 Welcome to casenexus.com
+
+    .span5
+      .center
+        %p
+          This site does things
+        = link_to "Sign up now!", signup_path, class: "btn btn-large btn btn-primary"
