--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -33,4 +33,4 @@
   #mappanel_user.mappanel
     #user
 
-  %script(type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false")
+  %script(type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false")
