--- a/app/views/roulette/index.html.haml
+++ b/app/views/roulette/index.html.haml
@@ -50,9 +50,9 @@
                     = @onlineuser.country
 
               %a{:href => "skype:#{@onlineuser.skype}?call"}
-                %img{:alt => "My status", :src => "http://mystatus.skype.com/bigclassic/christianclough", :style => "border: none;width: 182px;height: 44px;margin:20px;"}/
+                %img{:alt => "My status", :src => "https://mystatus.skype.com/bigclassic/christianclough", :style => "border: none;width: 182px;height: 44px;margin:20px;"}/
 
 
-  %script{:src => "http://download.skype.com/share/skypebuttons/js/skypeCheck.js", :type => "text/javascript"}
+  %script{:src => "https://download.skype.com/share/skypebuttons/js/skypeCheck.js", :type => "text/javascript"}
 
 
