--- a/app/views/messages/_notify_form.html.haml
+++ b/app/views/messages/_notify_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@message) do |f|
+= form_for(@message, remote: true) do |f|
   = render 'shared/error_messages', object: @message
   .field
     = f.text_area :content, placeholder: "Send message...", style: "height:100px;"
